archived_files/objects/Security_Finding_Archive__b/Security_Finding_Archive__b.object-meta.xml
<CustomObject>
    <label>Security Finding Archive</label>
    <pluralLabel>Security Finding Archives</pluralLabel>
    <indexes>
        <fullName>StandardIndex</fullName>
        <label>Standard Index</label>
        <fields>
            <name>Archived_At__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Subject_User_Id__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
</CustomObject>