archived_files/objects/Security_Finding_Archive__b/fields/Action_History__c.field-meta.xml
<CustomField>
    <fullName>Action_History__c</fullName>
    <description>Captured action history JSON at time of archive.</description>
    <label>Action History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>