archived_files/objects/Security_Finding_Archive__b/fields/Archived_At__c.field-meta.xml
<CustomField>
    <fullName>Archived_At__c</fullName>
    <description>Datetime the finding was archived. Primary index sort key.</description>
    <label>Archived At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>