archived_files/objects/Security_Finding_Archive__b/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category at time of archive.</description>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>