archived_files/objects/Security_Finding_Archive__b/fields/Detection_Rule__c.field-meta.xml
<CustomField>
    <fullName>Detection_Rule__c</fullName>
    <description>Detection rule developer name at time of archive.</description>
    <label>Detection Rule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>