archived_files/objects/Security_Finding_Archive__b/fields/Finding_Number__c.field-meta.xml
<CustomField>
    <fullName>Finding_Number__c</fullName>
    <description>Original Security_Finding__c Name (e.g. FND-0000123).</description>
    <label>Finding Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>