archived_files/objects/Security_Finding_Archive__b/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <description>Datetime the source finding was resolved, if applicable.</description>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>