archived_files/objects/Security_Finding_Archive__b/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity at time of archive.</description>
    <label>Severity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>