archived_files/objects/Security_Finding_Archive__b/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Final status of the finding at time of archive.</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>