archived_files/objects/Security_Finding_Archive__b/fields/Subject_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Subject_App_Id__c</fullName>
    <description>Subject Connected App Id at time of archive.</description>
    <label>Subject App Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>