archived_files/objects/Security_Finding_Archive__b/fields/Subject_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Subject_User_Id__c</fullName>
    <description>Subject User Id at time of archive. Secondary index field.</description>
    <label>Subject User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>